[metadata]
name = snarl
version = attr: snarl.__version__
description = Literate programming with Markdown
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsks/snarl
author = Lars Kellogg-Stedman
author_email = lars@oddbit.com

[options]
packages = find:
install_requires =
    click

[options.entry_points]
console_scripts =
    snarl = snarl.main:main
